--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script src="script.js"></script>
+		<script defer src="script.js"></script>
 	</head>
 	<body>
 		<p id="xss"></p>
